--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
     {% endfor %}
 
     <!-- The code below is used for manually entered links  -->
-    <a class="sidebar-nav-item" href="https://digbmc.github.io/emperor-moon/playtext/" target="_blank">GitHub project</a>
+    <a class="sidebar-nav-item" href="https://digbmc.github.io/emperor-moon/playtext/" target="_blank">Text of the play</a>
   </nav>
     <span style='cursor:pointer;' onclick="javascript:var hypothesis = document.createElement('script');
       hypothesis.setAttribute('src','https://hypothes.is/embed.js');
